Final edits for desktop website

--- a/Contact_Us.html
+++ b/Contact_Us.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Bordertown Coffee Contact Us</title>
-  <link rel="stylesheet" href="stylesheet_home.css">
+  <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
     <img src="images/Bordertown_Logo.webp" alt="Bordertown Logo">
 
     <section class="links">
-      <a href="#">Home</a>
-      <a href="#">Menu</a>
-      <a href="#">Library Reservation</a>
-      <a href="#">Contact Us</a>
+      <a href="Bordertown_Homepage.html">Home</a>
+      <a href="Menu.html">Menu</a>
+      <a href="Library.html">Library Reservation</a>
+      <a href="Contact_Us.html">Contact Us</a>
     </section>
   </header>
 
