--- a/Library.html
+++ b/Library.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bordertown Library</title>
-    <link rel="stylesheet" href="stylesheet_home.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
         <img src="images/Bordertown_Logo.webp" alt="Bordertown Logo">
 
         <section class="links">
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">Library Reservation</a>
-            <a href="#">Contact Us</a>
+            <a href="Bordertown_Homepage.html">Home</a>
+            <a href="Menu.html">Menu</a>
+            <a href="Library.html">Library Reservation</a>
+            <a href="Contact_Us.html">Contact Us</a>
         </section>
     </header>
 
@@ -56,47 +56,67 @@
 
                 <aside class="hours">
                     <div class="day">
-                        <div class="left">Monday</div>
+                        <div class="left">
+                            <p>Monday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br />
-                            1:00 pm - 4:00 pm
+                            <p>8:00 am - 11:00 am<br />
+                                1:00 pm - 4:00 pm</p>
                         </div>
                     </div>
                     <div class="day">
-                        <div class="left">Tuesday</div>
+                        <div class="left">
+                            <p>Tuesday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br>
-                            1:00 pm - 4:00 pm</div>
+                            <p>8:00 am - 11:00 am<br>
+                                1:00 pm - 4:00 pm</p>
+                        </div>
                     </div>
                     <div class="day">
-                        <div class="left">Wednesday</div>
+                        <div class="left">
+                            <p>Wednesday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br>
-                            1:00 pm - 4:00 pm</div>
+                            <p>8:00 am - 11:00 am<br>
+                                1:00 pm - 4:00 pm</p>
+                        </div>
                     </div>
                     <div class="day">
-                        <div class="left">Thursday</div>
+                        <div class="left">
+                            <p>Thursday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br>
-                            1:00 pm - 4:00 pm</div>
+                            <p>8:00 am - 11:00 am<br>
+                                1:00 pm - 4:00 pm</p>
+                        </div>
                     </div>
                     <div class="day">
-                        <div class="left">Friday</div>
+                        <div class="left">
+                            <p>Friday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br>
-                            1:00 pm - 4:00 pm</div>
+                            <p>8:00 am - 11:00 am<br>
+                                1:00 pm - 4:00 pm</p>
+                        </div>
                     </div>
                     <div class="day">
-                        <div class="left">Saturday</div>
+                        <div class="left">
+                            <p>Saturday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br>
-                            1:00 pm - 4:00 pm</div>
+                            <p>8:00 am - 11:00 am<br>
+                                1:00 pm - 4:00 pm</p>
+                        </div>
                     </div>
                     <div class="day">
-                        <div class="left">Sunday</div>
+                        <div class="left">
+                            <p>Sunday</p>
+                        </div>
                         <div class="right">
-                            8:00 am - 11:00 am<br>
-                            1:00 pm - 4:00 pm</div>
+                            <p>8:00 am - 11:00 am<br>
+                                1:00 pm - 4:00 pm</p>
+                        </div>
                     </div>
                 </aside>
             </div>
