--- a/Bordertown_Homepage.html
+++ b/Bordertown_Homepage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bordertown Coffee</title>
-    <link rel="stylesheet" href="stylesheet_home.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
@@ -13,9 +13,9 @@
 
         <section class="links">
             <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">Library Reservation</a>
-            <a href="#">Contact Us</a>
+            <a href="Menu.html">Menu</a>
+            <a href="Library.html">Library Reservation</a>
+            <a href="Contact_Us.html">Contact Us</a>
         </section>
     </header>
 
