--- a/Menu.html
+++ b/Menu.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bordertown Menu</title>
-    <link rel="stylesheet" href="stylesheet_home.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
@@ -12,10 +12,10 @@
         <img src="images/Bordertown_Logo.webp" alt="Bordertown Logo">
 
         <section class="links">
-            <a href="#">Home</a>
-            <a href="#">Menu</a>
-            <a href="#">Library Reservation</a>
-            <a href="#">Contact Us</a>
+            <a href="Bordertown_Homepage.html">Home</a>
+            <a href="Menu.html">Menu</a>
+            <a href="Library.html">Library Reservation</a>
+            <a href="Contact_Us.html">Contact Us</a>
         </section>
     </header>
 
@@ -134,9 +134,148 @@
                 </section>
 
                 <h2>In House Baked Goods</h2>
+
+                <section class="cards width-40-pct">
+                    <section class="card">
+                        <h3>Banana Bread</h3>
+                        <p>Banana bread made with organic bananas and butter, a local favorite!
+                            $4.75+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Muffin</h3>
+                        <p>Baked in a variety of flavors, with love, by our wonderful bakers!
+                            $4.50+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Cookie</h3>
+                        <p>One large, delicious cookie!
+                            $3.50+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Scone</h3>
+                        <p>Made on Monday and Wednesday mornings, a delicious treat indeed!
+                            $4.75+</p>
+                    </section>
+                </section>
+
+                <h2>Breakfast</h2>
+
+                <section class="cards width-40-pct">
+                    <section class="card">
+                        <h3>Breakfast Sandwich</h3>
+                        <p>A quiche square with cheddar cheese and bacon on a bagel from St. Paul Bagelry.
+                            $9.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Quiche Cup</h3>
+                        <p>A small quiche, about half the size of a normal slice of quiche.
+                            $2.75</p>
+                    </section>
+                </section>
+
+                <h2>Tea and Tea Drinks</h2>
+
+                <section class="cards width-40-pct">
+                    <section class="card">
+                        <h3>Chai Latte</h3>
+                        <p>Spiced black tea blended with honey and steamed milk.
+                            $5.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>London Fog</h3>
+                        <p>Earl Grey tea with vanilla and steamed milk. Mildly flavored and delicious, perfect for a
+                            chilly day.
+                            $5.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Iced Tea</h3>
+                        <p>Tea cold brewed for optimal smoothness.
+                            $3.50+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Hot Tea</h3>
+                        <p>We have a large selection of wonderful teas from Teasource and Verdant tea.
+                            $4.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Matcha Latte</h3>
+                        <p>High quality Matcha ordered directly from Japan and combined with steamed milk. Base order
+                            comes unsweetened.
+                            $6.00+</p>
+                    </section>
+                </section>
+
+                <h2>Other Drinks</h2>
+
+                <section class="cards width-40-pct">
+                    <section class="card">
+                        <h3>Cold Press</h3>
+                        <p>Coarse ground coffee brewed cold for a long time. Very smooth, the way to make iced coffee!
+                            $4.75+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Golden Milk Latte</h3>
+                        <p>This caffeine free spice latte is made with a turmeric spice blend and local honey.
+                            $4.50+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Hot Chocolate</h3>
+                        <p>Steamed milk and our spiced hot chocolate blend.
+                            $4.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Cold Press Mocha</h3>
+                        <p>Cold Press with ghirardelli chocolate sauce and milk.
+                            $6.00+</p>
+                    </section>
+                </section>
+
+                <h2>Bottled Drinks</h2>
+
+                <section class="cards width-40-pct">
+                    <section class="card">
+                        <h3>Kombucha</h3>
+                        <p>Provided by Deanne’s Kombucha.
+                            $5.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>San Pellegrino 500mL bottle</h3>
+                        <p>$1.50</p>
+                    </section>
+                    <section class="card">
+                        <h3>Fresh Steeps Nitro Tea Can</h3>
+                        <p>Canned nitro tea! Choose from Chai, Yerba Mate and hibiscus options.
+                            $4.49+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Mexican Coka Cola</h3>
+                        <p>Coka-Cola made with real sugar!
+                            $3.00</p>
+                    </section>
+                </section>
+
+                <h2>Lunch</h2>
+
+                <section class="cards width-40-pct">
+                    <section class="card">
+                        <h3>Panini Sandwich</h3>
+                        <p>Made on sourdough bread and toasted on a panini grill with butter. Add a side of chips, a
+                            spear pickle or macaroni salad.
+                            $5.00+</p>
+                    </section>
+                    <section class="card">
+                        <h3>Tomato Soup</h3>
+                        <p>Tomato soup from Trader Joe’s!
+                            $3.00</p>
+                    </section>
+                </section>
             </section>
         </section>
     </section>
+
+    <footer>
+        315 16TH AVE SE | BORDERTOWN COFFEE | MINNEAPOLIS | MN | 55414 | PHONE 612.379.7277
+    </footer>
 </div>
 
 </body>
